# RagChatBotFAQs

./: .containerignore  .env.example  .gitignore  Containerfile.backend  Makefile  README.md  podman-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  embeddings.py  generation.py  history.py  ingestion.py  langchain_rag.py  main.py  retrieval.py  schemas.py  service.py  vector_store.py
data/sample_docs/: employee-handbook.txt  product-faq.txt  support-runbook.txt
data/sessions/: 1cd930a6-75ba-4e13-b2ee-afaefd677699.json  3e385b26-10f1-4639-ada1-58428e56e538.json  85eb9d36-293e-4856-b1e0-b5dcaa27770d.json  demo-session.json
docs/: podman-deployment.md  project-literature.md  project-plan.md  requirements.md
frontend/: Containerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AnswerPanel.jsx  AskPanel.jsx  BuildPanel.jsx  ChunksPanel.jsx  CitationsPanel.jsx  CorpusListPanel.jsx  DocumentsPanel.jsx  HeroSection.jsx  HistoryPanel.jsx  PreviewPanel.jsx  SourceBadge.jsx  TranscriptPanel.jsx
frontend/src/stores/: AppStore.jsx  ChatStore.jsx  CorpusStore.jsx
frontend/src/utils/: appRuntime.js  formatters.js
tests/: test_ingestion.py
