[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot-faqs"
version = "0.1.0"
description = "Local RAG chatbot for FAQ, error logs, spreadsheets, and PDF manuals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.5,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
  "pydantic-settings>=2.5,<3",
  "pypdf>=5,<6",
  "python-dotenv>=1,<2",
  "python-multipart>=0.0.12,<1",
  "rapidfuzz>=3.10,<4",
  "sentence-transformers>=3.0,<4",
  "uvicorn[standard]>=0.31,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
