[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chatbot-faqs"
version = "0.2.0"
description = "Conversational document-grounded RAG chatbot with admin and user UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.5,<1",
  "fastapi>=0.115,<1",
  "langchain>=0.3,<0.4",
  "langchain-chroma>=0.2,<1",
  "langchain-community>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-openai>=0.3,<1",
  "langchain-text-splitters>=0.3,<0.4",
  "pydantic-settings>=2.5,<3",
  "pypdf>=5,<6",
  "python-dotenv>=1,<2",
  "python-multipart>=0.0.12,<1",
  "uvicorn[standard]>=0.31,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
